<resources>
    <string name="app_name">Assignment_1</string>
    <string name="title_activity_forget_pass">ForgetPass</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="username_edittxt">Enter Username</string>
    <string name="name">Enter your name</string>
    <string name="dob">Enter your date of birth</string>
    <string name="major">Enter your major</string>
    <string name="email_edittxt">Enter your MSU email</string>
    <string name="password">Enter your password</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="register_btn">Register</string>
    <string name="email_tv">Email:</string>
    <string name="username_tv">Username:</string>
    <string name="welcome">WELCOME TO MSU</string>
    <string name="password_tv">Password:</string>
</resources>
