<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.RegistrationPage"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/new_background">


    <EditText
        android:id="@+id/Reg_UserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:hint="@string/username_edittxt" />

    <EditText
        android:id="@+id/Reg_SName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/Reg_DoB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/dob"
        android:focusable="false"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/Reg_SMajor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:hint="@string/major" />

    <EditText
        android:id="@+id/Reg_Email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/email_edittxt"
        android:inputType="textWebEmailAddress"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/Reg_pass1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Reg_pass2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:hint="@string/password_confirm" />

    <Button
        android:id="@+id/btn_Reg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0FFF"
        android:text="@string/register_btn" />
</LinearLayout>
