<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/new_background"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.forgetPass">

    <TextView
        android:id="@+id/txtview_fgtpassUsrname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_tv"/>

    <EditText
        android:id="@+id/usrname_fgtpass"
        android:layout_below="@+id/txtview_fgtpassUsrname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_edittxt"/>
    
    <Space
        android:id="@+id/space1"
        android:layout_below="@+id/usrname_fgtpass"
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/txtview_fgtpassEmail"
        android:layout_below="@+id/space1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_tv"/>

    <EditText
        android:id="@+id/email_fgtpass"
        android:layout_below="@+id/txtview_fgtpassEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:hint="@string/email_edittxt"/>

    <Button
        android:id="@+id/btn_fgtpass"
        android:layout_below="@+id/email_fgtpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"/>

</RelativeLayout>
